--- a/src/Home.css
+++ b/src/Home.css
@@ -161,5 +161,11 @@
       font-size: 10px;
       padding: 1%;
     }
+
+    .active-button {
+        font-size: 10px;
+        padding: 2%;
+    }
+
   
   }
