--- a/src/Rule.css
+++ b/src/Rule.css
@@ -132,6 +132,13 @@
       font-size: 10px;
       padding: 1%;
     }
+
+    .active-button {
+        font-size: 10px;
+        padding: 2%;
+    }
+
+    
   
 
   }
